# new-sp-screening

./: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  alembic.ini  docker-compose.yml  liquibase.properties  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
app/: config.py  main.py  telemetry.py
app/api/: _batch_export.py  deps.py  routes_admin.py  routes_batch.py  routes_dashboards.py  routes_data.py  routes_eval.py  routes_feedback.py  routes_hs.py  routes_jobs.py  routes_results.py  routes_rules.py  routes_sanctions.py  routes_screen.py  routes_status.py  routes_thresholds.py  routes_training.py
app/db/: models.py  session.py
app/models/: embedder.py  ltr.py  ner_model.py  registry.py  reranker.py
app/pipeline/: assemble.py  confidence.py  decompose.py  embedding_generation.py  fusion.py  ner.py  normalize.py  normalize_party.py  orchestrator.py  persistence.py  policy.py  rerank.py  rules.py  sanctions.py  versions.py
app/refdata/: common.py
app/schemas/: rule.py  screen.py
app/training/: ltr_dataset.py  ltr_train.py
app/workers/: arq_app.py  batch_screen.py  calibration_jobs.py  embedding_jobs.py  (+4 more)
docker/: entrypoint.sh
docs/: api-reference.md  architecture.md  data-flow-diagram.md  data-flow-example.md  evaluation.md  extending.md  feedback-loop.md  inference.md  ingestion.md  naming-conventions.md  sanctions-sources.md  training.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
migrations/: env.py
scripts/: bootstrap_data.py
tests/: conftest.py
(+156 files in other folders)
